Satellites of planets pages, homepage, Mars interactive map

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
   link: planet
 - name: Moons
   link: natural-satellite
-- name: Asteroid belt
-  link: asteroid-belt
+- name: Asteroids
+  link: asteroid
 - name: TNOs
   link: tno
 - name: Exoplanets
