Page categories demo, Uranus moon pages, Earth and Galaxy pages expanded, minor edits

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,9 @@
   link: asteroid
 - name: TNOs
   link: tno
-- name: Exoplanets
-  link: exoplanet
+- name: Comets
+  link: comet
 - name: Stars
   link: star
+- name: Exoplanets
+  link: exoplanet
